Refactor Musica class to Musicas with validations